--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.2</version>
+		<version>3.2.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.ProjectRest</groupId>
@@ -13,7 +13,10 @@
 	<name>project-rest-api</name>
 	<description>Api do Project Rest integrando JDEV</description>
 	<properties>
+		<maven-surefire-plugin-version>2.22.2</maven-surefire-plugin-version>
 		<java.version>11</java.version>
+		<source>11</source> 
+    	<target>11</target> 
 	</properties>
 	<dependencies>
 		<dependency>
